# so_notifier

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: api_client.rs  decoder.rs  logger.rs  main.rs  questions.rs
src/notifications/: desktop.rs
