[package]
name = "so_notifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json", "gzip"] }
serde =  { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
notify-rust = "4"
syslog = "6.0.1"
